--- a/notebooks/quick_start_with_hugging_face.ipynb
+++ b/notebooks/quick_start_with_hugging_face.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/homeroti/blank-app/blob/main/notebooks/quick_start_with_hugging_face.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1fgVWTMK9SNz"
       },
       "source": [
@@ -115,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "ZwUUIY0gpY4W"
       },
@@ -155,10 +145,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "CulOXOrhpY4W",
-        "outputId": "4383f75a-ca5e-4940-9f63-bea7d51729aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4383f75a-ca5e-4940-9f63-bea7d51729aa"
       },
       "outputs": [
         {
@@ -196,14 +186,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "id": "YORs_sDfpY4X",
-        "outputId": "bb4d5f1d-c57d-45b3-923d-d2436075519a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 582
-        }
+        },
+        "outputId": "84f64330-c72a-4435-ae98-e20ed760548d"
       },
       "outputs": [
         {
@@ -217,7 +207,7 @@
             "\u001b[0;31mStopIteration\u001b[0m: ",
             "\nDuring handling of the above exception, another exception occurred:\n",
             "\u001b[0;31mPackageNotFoundError\u001b[0m                      Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-11a151afa366>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0muse_quantization\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mmodel_kwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"quantization_config\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBitsAndBytesConfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mload_in_4bit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-10-11a151afa366>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0muse_quantization\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mmodel_kwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"quantization_config\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBitsAndBytesConfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mload_in_4bit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/transformers/utils/quantization_config.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, load_in_8bit, load_in_4bit, llm_int8_threshold, llm_int8_skip_modules, llm_int8_enable_fp32_cpu_offload, llm_int8_has_fp16_weight, bnb_4bit_compute_dtype, bnb_4bit_quant_type, bnb_4bit_use_double_quant, bnb_4bit_quant_storage, **kwargs)\u001b[0m\n\u001b[1;32m    506\u001b[0m             \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Unused kwargs: {list(kwargs.keys())}. These kwargs are not used in {self.__class__}.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    507\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 508\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost_init\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    509\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    510\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/transformers/utils/quantization_config.py\u001b[0m in \u001b[0;36mpost_init\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    564\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bnb_4bit_use_double_quant must be a boolean\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    565\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 566\u001b[0;31m         if self.load_in_4bit and not version.parse(importlib.metadata.version(\"bitsandbytes\")) >= version.parse(\n\u001b[0m\u001b[1;32m    567\u001b[0m             \u001b[0;34m\"0.39.0\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    568\u001b[0m         ):\n",
             "\u001b[0;32m/usr/lib/python3.11/importlib/metadata/__init__.py\u001b[0m in \u001b[0;36mversion\u001b[0;34m(distribution_name)\u001b[0m\n\u001b[1;32m   1007\u001b[0m         \u001b[0;34m\"Version\"\u001b[0m \u001b[0mmetadata\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1008\u001b[0m     \"\"\"\n\u001b[0;32m-> 1009\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdistribution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistribution_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1010\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1011\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -383,11 +373,11 @@
       "execution_count": 6,
       "metadata": {
         "id": "ARXpCL8cpY4X",
-        "outputId": "4cd834e9-f9bb-4eb7-9f58-d1007c6fbd54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "4cd834e9-f9bb-4eb7-9f58-d1007c6fbd54"
       },
       "outputs": [
         {
@@ -419,11 +409,11 @@
       "execution_count": 8,
       "metadata": {
         "id": "1S8x3TYZpY4X",
-        "outputId": "c9552cd5-3864-4378-c9cd-403b685feb6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 952
-        }
+        },
+        "outputId": "c9552cd5-3864-4378-c9cd-403b685feb6b"
       },
       "outputs": [
         {
@@ -492,11 +482,11 @@
       "execution_count": 4,
       "metadata": {
         "id": "r79gVN-5pY4X",
-        "outputId": "6f8ad9e5-629b-4bfa-fcbd-ee94ae7b2fcb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "6f8ad9e5-629b-4bfa-fcbd-ee94ae7b2fcb"
       },
       "outputs": [
         {
@@ -625,7 +615,6 @@
       "execution_count": 12,
       "metadata": {
         "id": "MCmVMv1ppY4X",
-        "outputId": "8993735f-8733-4dcd-a17d-785e3d83f186",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -642,7 +631,8 @@
             "56819ebbe36249379267514a2920d2ac",
             "61a5a63b28794da49abfb0aa2fdd07d5"
           ]
-        }
+        },
+        "outputId": "8993735f-8733-4dcd-a17d-785e3d83f186"
       },
       "outputs": [
         {
@@ -684,11 +674,11 @@
       "execution_count": 13,
       "metadata": {
         "id": "HF9WVe5spY4X",
-        "outputId": "0f2e0ea5-d425-43f0-beeb-7c08f76e638c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 824
-        }
+        },
+        "outputId": "0f2e0ea5-d425-43f0-beeb-7c08f76e638c"
       },
       "outputs": [
         {
@@ -738,7 +728,6 @@
       "execution_count": 14,
       "metadata": {
         "id": "P6FKsYKypY4X",
-        "outputId": "680e2f6d-2efb-4da9-a426-385f0ab2df16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -755,7 +744,8 @@
             "972e948e49864c5ab59566d2c1fdbeeb",
             "ce2b281dc90c433fb50bf0f27ed46da3"
           ]
-        }
+        },
+        "outputId": "680e2f6d-2efb-4da9-a426-385f0ab2df16"
       },
       "outputs": [
         {
@@ -788,11 +778,11 @@
       "execution_count": 15,
       "metadata": {
         "id": "MyVj7lhKpY4X",
-        "outputId": "9a9615fd-adab-4786-f3b1-2f4c89c78438",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
-        }
+        },
+        "outputId": "9a9615fd-adab-4786-f3b1-2f4c89c78438"
       },
       "outputs": [
         {
@@ -864,8 +854,7 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
